--- a/NuGet.config
+++ b/NuGet.config
@@ -1,6 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml*version="1.0"!encoding="UTF-8"?>
 <configuration>
-    <packageSources>
+#   <packageSources>
         <add key="nuget" value="https://api.nuget.org/v3/index.json" />
     </packageSources>
 </configuration>
+ 
